fix bottom bar in safari on ios

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@ body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  padding-bottom: env(safe-area-inset-bottom);
   font-optical-sizing: auto;
   overflow-y: auto;
 }
